# irs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/technical/: client_cap.txt  encap.txt  ts6-charybdis.txt  ts6-hybrid.txt
examples/: example_config.toml
src/: channels.rs  config.rs  error_structs.rs  login.rs  main.rs  messages.rs  sender.rs  user.rs  userid_gen.rs  usermodes.rs
src/commands/: cap.rs  join.rs  mod.rs  nick.rs  pass.rs  ping.rs  privmsg.rs  user.rs  who.rs
src/ts6/: mod.rs  structs.rs
src/ts6/commands/: capab.rs  mod.rs  ping.rs  privmsg.rs  server.rs  svinfo.rs  uid.rs
