[package]
name = "irs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive"] }
once_cell = "1.21.3"
tokio = { version = "1.47.1", features = ["full"] }
console-subscriber = { version = "0.4.1", optional = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thiserror = "2.0.17"
anyhow = "1.0.100"

[features]
tokio-console = ["tokio/tracing", "console-subscriber"]
