[package]
name = "irs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
console-subscriber = { version = "0.5.0", optional = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
thiserror = "2.0.17"
anyhow = "1.0.100"
toml = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"

[features]
tokio-console = ["tokio/tracing", "console-subscriber"]
